# src/main/java/com/david/xpup/backend/controller/PublicacionController.java
@@ -2,10 +2,7 @@ package com.david.xpup.backend.controller;
 
 import com.david.xpup.backend.service.PublicacionService;
 import com.david.xpup.generated.api.PublicacionesApi;
-import com.david.xpup.generated.model.InternalPostCreateResponse;
-import com.david.xpup.generated.model.InternalPostDetailResponse;
-import com.david.xpup.generated.model.InternalPostRequest;
-import com.david.xpup.generated.model.MessageResponse;
+import com.david.xpup.generated.model.*;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -29,6 +26,14 @@ public class PublicacionController implements PublicacionesApi {
     @Override
     public ResponseEntity<InternalPostDetailResponse> getPostById(Integer postId) {
         return ResponseEntity.ok(publicacionService.getPostById(postId));
+    }
+
+    @Override
+    public ResponseEntity<InternalPostDetailResponse> updatePost(
+            Integer postId,
+            InternalPostUpdateRequest internalPostUpdateRequest
+    ) {
+        return ResponseEntity.ok(publicacionService.updatePost(postId, internalPostUpdateRequest));
     }
 
     @Override
